added javascript for search_results and sell books pages.

--- a/paper-crown/includes/commons.html
+++ b/paper-crown/includes/commons.html
@@ -91,6 +91,13 @@ display: block;
     font-size: 12px;
     margin-bottom: 20px;
 }
+.avgrund-popup h2{
+			 font-size: 24px;
+    font-family: 'source_sans_proregular';
+    color: #333333;
+    text-align: left;
+    padding: 0px 0px 0px 0px; 
+}
 .avgrund-popup p{
     line-height: 5px;
     font-size: 12px;
