--- a/paper-crown/includes/header.html
+++ b/paper-crown/includes/header.html
@@ -1,7 +1,8 @@
+
 <header>
                 <div id="sec">
                     <div class="logo">
-                        <a href="index.html"><img src="../images/logo.png" alt="Paper Crown Logo"></a>
+                        <a href="index.php"><img src="../images/logo.png" alt="Paper Crown Logo"></a>
                     </div>
                    <div id="location">
                         <ul>
@@ -23,24 +24,24 @@
                     <nav>
                         <ul>
                             <li class="Selected" style="border-left: none;">
-                                <a href="#">How It Works</a>
+                                <a href="search_result.php">Advanced Search</a>
                             </li>
                             <li>
-                                <a href="#">About</a>
+                                <a href="sell_your_book.php">Sell Books</a>
                             </li>
                             <li>
-                                <a href="#">Contact</a>
+                                <a href="">About</a>
                             </li>
                             <li>
-                                <a href="search_result.html">Advanced Search</a>
+                                <a href="how_it_works.php">How It Works</a>
                             </li>
                             <li style="border-right: none;">
-                                <a href="#">Sell Books</a>
+                                <a href="contact.php">Contact</a>
                             </li>
                         </ul>
 		    </nav>
                 </div>
-		<div class="mask"></div>
+		<!--<div class="mask"></div>-->
                 <aside id="default-popup" class="avgrund-popup">
 			<h2><img src="../images/drop_pin.png" alt="location">Select Your Location</h2><br>
                         <a  href="#" style=" float: right; margin-top: -29%; margin-right: -11%;" onclick="javascript:closeDialog();"><img src="../images/close.png" alt="Close"></a>
