--- a/paper-crown/css/style.css
+++ b/paper-crown/css/style.css
@@ -170,13 +170,12 @@ lable{
     background-image: url('../images/contact_seller_hover.png');
 }
 .seller_details{
-    display: none;
     width: 170px;
     padding: 15px 15px 0px 15px;
     background-color: #ffffff;
     border: 1px solid #dcddda;
     margin-left: -52.5%;
-    margin-top: -1%;
+    margin-top: -12.4%;
 }
 .seller_details p{
     width: 170px;
@@ -335,4 +334,29 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
     margin-top: -0.4%;
     color: #809634;
     font-size: 12px;
+}
+.heading_search{
+    color: #555555;
+    font-size: 18px;
+    font-family: 'source_sans_probold';
+}
+.heading{
+    color: #809634;
+}
+.para1{
+    font-size: 18px;
+    color: #555555;
+    line-height: 25px;
+    text-align: justify;
+}
+.para2{
+    font-size: 18px;
+    color: #555555;
+    line-height: 25px;
+    text-align: justify;
+}
+.book{
+    float: left;
+    padding: 40px;
+    padding-left: 0px;
 }
