Update new page

--- a/paper-crown/includes/header.html
+++ b/paper-crown/includes/header.html
@@ -44,11 +44,12 @@
 			<label>Location: </label>
                             <select id="location-select" name="states">
                                 <option value=""> -Select Your City- </option>
-                                <option value="Delhi">Delhi</option>
                                 <option value="Allahabad">Allahabad</option>
-                                <option value="Business">Business</option>
-                                <option value="ComputerScience">Computer Science</option>
-                                <option value="Economics">Economics</option>
+                                <option value="Agra">Agra</option>
+                                <option value="Bangalore">Bangalore</option>
+                                <option value="Delhi">Delhi</option>
+                                <option value="Mumbai">Mumbai</option>
+                                <option value="Lucknow">Lucknow</option>
                             </select>
                             <p>Or</p>
                         <label>Enter Your Zipcode : </label>
