--- a/paper-crown/css/main.css
+++ b/paper-crown/css/main.css
@@ -1,6 +1,9 @@
+
 body{
 /* Setting default text color, background and a font stack */
     font-size: 14px;
+    overflow: scroll;
+    height: 100%;
     font-family: 'source_sans_proregular';
     color: #555555;
     line-height: 1.286;
@@ -35,7 +38,7 @@ img{
 }
 section{
     width: 100%;
-    height: auto;
+    height: 100%;
     margin: 0px auto;
 }
 header{
@@ -118,6 +121,7 @@ nav a{
     margin-right: 18%;
 }
 #container{
+    height: 100%;
     width: 980px;
     margin: 0px auto;
 }
@@ -224,10 +228,11 @@ box-shadow: 0 1px 2px rgba(0,0,0,.2);
 }
 
 footer{
+    width: 100%;
     clear: both;
     position: relative;
-    z-index: 10;
-    height:110px;
+    bottom: 0;
+    left: 0 ;
     background: url('../images/footer_bg.png');
 }
 #footer_sec{
