--- a/paper-crown/css/style.css
+++ b/paper-crown/css/style.css
@@ -317,13 +317,17 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
     border: 0;
     padding: 0;
 }
-
+.category{
+    width: 200px;
+    height: 25px;
+    background: #ffffff;
+    border: 1px solid #e5e6e3;
+}
 #states{
     width: 200px;
     height: 25px;
     background: #ffffff;
     border: 1px solid #e5e6e3;
-  
 }
 #sort_by{
     width: 120px;
