--- a/paper-crown/css/style.css
+++ b/paper-crown/css/style.css
@@ -51,8 +51,8 @@ h3{
     color: #555555;
     padding:20px 0px 5px 0px;
 }
-lable{
-    margin-right: 20px;
+label{
+    margin-right: 0px;
 
 }
 .search{
@@ -68,6 +68,7 @@ lable{
     margin-bottom: 15px;
     margin-right: 20%;
 }
+
 .price_box{
     height: 28px;
     width: 50px;
@@ -117,10 +118,11 @@ lable{
 }
 .book_image{
     height: 200px;
-    width: 18.6%;
+    width: 18.7%;
     border: 1px solid #d6d6d6;
     float: left;
     margin: 20px;
+    margin-bottom: 30px;
 }
 .book_details{
     width: 55%;
@@ -344,6 +346,13 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
     font-size: 18px;
     font-family: 'source_sans_probold';
 }
+.designation{
+    color: #555555;
+    font-size: 18px;
+    margin-top: -25%;
+    line-height: 10px;
+    font-family: 'source_sans_probold';
+}
 .heading{
     color: #809634;
 }
@@ -363,4 +372,19 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
     float: left;
     padding: 40px;
     padding-left: 0px;
+}
+.para2 a{
+    font-size: 16px;
+    color: #555555;
+    text-decoration: underline;
+}
+.para2 a:hover{
+    font-size: 16px;
+    color:#809634;
+    text-decoration: underline;
+}
+.team{
+    font-size: 16px;
+    line-height: 1px;
+    padding-top:5px;
 }
