Added meta tags. keywords and description

--- a/paper-crown/includes/commons.html
+++ b/paper-crown/includes/commons.html
@@ -1,9 +1,7 @@
 <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    
-    <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=yes" />
-    <title>Paper Crown</title>
+    <meta name="description" content="Search or advertise one or more books that you want to buy or sell in 1-step process in your nearby locality in India at Papercrown.in">
+    <meta name="keywords" content="Saerch Books Online, Advertise to Sell Books Online, Online Book Portal in India, - Papercrown.in">
+    <title>Search or Sell Books in your local area at Papercrown.in</title>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/font.css">
     <script type="text/javascript" src="../jquery/location_popup.js"></script>
