--- a/paper-crown/includes/footer.html
+++ b/paper-crown/includes/footer.html
@@ -14,7 +14,7 @@
                 </li>
                 <li>
                     <p style="color: #9f9e9e; font-size: 11px; margin-top: 0px;  ">PaperCrown.in   &nbsp; &copy; &nbsp;   2014  &nbsp;|&nbsp;  <a href="#">Privacy Policy</a> &nbsp;|&nbsp;
-            Designed By : <a href="https://www.linkedin.com/profile/view?id=98016489&goback=%2Enmp_*1_*1_*1_*1_*1_*1_*1_*1_*1_*1_*1&trk=spm_pic"  target="_blank">Ruchi Pandeya</a></p>
+            Designed By : <a href="#"  target="_blank">Ruchi Pandeya</a></p>
                 </li>
                 
             </ul>
