--- a/paper-crown/includes/header.html
+++ b/paper-crown/includes/header.html
@@ -1,3 +1,4 @@
+
 <header>
                 <div id="sec">
                     <div class="logo">
@@ -65,7 +66,7 @@
                               <span class="buttonText">Google</span>
                             </div>
                             <div style="margin-top: 20px">
-                                <img src="../images/facebook_login.png" alt=facebook button">
+                                <img src="../images/facebook_login.png" alt="facebook">
                             </div>
                         </div>
                             <a  href="#" style=" float: right; margin-top: -60%; margin-right: -11%;" onclick="javascript:closeDialog();"><img src="../images/close.png" alt="Close"></a>
